--- a/html/about.html
+++ b/html/about.html
@@ -22,32 +22,32 @@
         </div>
         <nav class="mobile__menu-nav">
           <ul class="mobile__menu-nav-item">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="location.html">Location</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
           <button class="btn">Get Scootin</button>
         </nav>
       </div>
     <header class="header container">
-      <div class="header__bar">
+      <a class="header__bar">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
           <path
             fill="#FCB72B"
             d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
           />
         </svg>
-      </div>
+      </a>
       <div>
-        <a href="#">
+        <a href="../index.html">
           <img class="header__logo" src="../assets/scoot.png" alt="logo" />
         </a>
       </div>
       <nav>
         <ul class="header__menu">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Location</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="location.html">Location</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
       </nav>
       <button class="btn header__button">Get Scootin</button>
