--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </div>
       <nav class="mobile__menu-nav">
         <ul class="mobile__menu-nav-item">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Location</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="./html/about.html">About</a></li>
+          <li><a href="./html/location.html">Location</a></li>
+          <li><a href="./html/careers.html">Careers</a></li>
         </ul>
         <button class="btn">Get Scootin</button>
       </nav>
@@ -44,15 +44,15 @@
         </svg>
       </a>
       <div>
-        <a href="#">
+        <a href="index.html">
           <img class="header__logo" src="./assets/scoot.png" alt="logo" />
         </a>
       </div>
       <nav>
         <ul class="header__menu">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Location</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="./html/about.html">About</a></li>
+          <li><a href="./html/location.html">Location</a></li>
+          <li><a href="./html/careers.html">Careers</a></li>
         </ul>
       </nav>
       <button class="btn header__button">Get Scootin</button>
