--- a/html/careers.html
+++ b/html/careers.html
@@ -18,7 +18,7 @@
     <div class="mobile__menu">
       <div class="mobile__menu-cross">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-          <path
+          <path class="menu__close"
             fill="#FCB72B"
             d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
           />
@@ -26,9 +26,9 @@
       </div>
       <nav class="mobile__menu-nav">
         <ul class="mobile__menu-nav-item">
-          <li><a href="about.html">About</a></li>
-          <li><a href="location.html">Location</a></li>
-          <li><a href="careers.html">Careers</a></li>
+          <li><a href="./html/about.html">About</a></li>
+          <li><a href="./html/location.html">Location</a></li>
+          <li><a href="./html/careers.html">Careers</a></li>
         </ul>
         <button class="btn">Get Scootin</button>
       </nav>
@@ -277,5 +277,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/mobile-nav.js"></script>
   </body>
 </html>
