--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- // mobile menu // -->
     <div class="mobile__menu">
       <div class="mobile__menu-cross">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-          <path
+        <svg class="cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+          <path class="menu__close"
             fill="#FCB72B"
             d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
           />
@@ -26,7 +26,7 @@
       </div>
       <nav class="mobile__menu-nav">
         <ul class="mobile__menu-nav-item">
-          <li><a href="./html/about.html">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="./html/location.html">Location</a></li>
           <li><a href="./html/careers.html">Careers</a></li>
         </ul>
@@ -36,7 +36,7 @@
     <!-- rest of the code -->
     <header class="header container">
       <a class="header__bar" id="header__bar">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <svg class="bar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
           <path
             fill="#FCB72B"
             d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
@@ -330,5 +330,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-nav.js"></script>
   </body>
 </html>
